# myCmake

./: Makefile  path.mk
cmake/t1/: CMakeLists.txt
cmake/t2/: CMakeLists.txt
cmake/t2/src/: CMakeLists.txt  main.c
cmake/t3/: CMakeLists.txt
cmake/t3/lib/: CMakeLists.txt  hello.c  hello.h
cmake/t4/: CMakeLists.txt
cmake/t4/src/: CMakeLists.txt  main.c
cmake/t5/: CMakeLists.txt
cmake/t5/src/: CMakeLists.txt  main.c
cmake/t6/: CMakeLists.txt
cmake/t6/cmake/: FindHELLO.cmake
cmake/t6/src/: CMakeLists.txt  main.c
cmake_test/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake_test/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cpp  mysqrt.cxx
cmake_test1/: CMakeLists.txt  main.cpp
cmake_test1/cmake/modules/: Findlibglog.cmake
cmake_test1/src/: CMakeLists.txt  test1.cpp  test1.h
