cmake_minimum_required(VERSION 2.8)

project(main)
ADD_DEFINITIONS(-DENABLE_DEBUG -DABC)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

message(status " LIBRARY_OUTPUT_PATH: " ${LIBRARY_OUTPUT_PATH})
message(status " EXECUTABLE_OUTPUT_PATH: " ${EXECUTABLE_OUTPUT_PATH})
add_subdirectory(src)

ADD_TEST(mytest ${PROJECT_BINARY_DIR}/bin/main)
ENABLE_TESTING()

message(status " CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message(status " PROJECT_BINARY_DIR: " ${PROJECT_BINARY_DIR})
message(status " main_BINARY_DIR: " ${main_BINARY_DIR})

message(status " CMAKE_SOURCE_DIR: " ${CMAKE_SOURCE_DIR})
message(status " PROJECT_SOURCE_DIR: " ${PROJECT_SOURCE_DIR})
message(status " main_SOURCE_DIR: " ${main_SOURCE_DIR})

message(status " CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})
message(status " CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR})

message(status " CMAKE_CURRENT_LIST_FILE: " ${CMAKE_CURRENT_LIST_FILE})
message(status " CMAKE_CURRENT_LIST_LINE: " ${CMAKE_CURRENT_LIST_LINE})
message(status " CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})

message(status " EXECUTABLE_OUTPUT_PATH: " ${EXECUTABLE_OUTPUT_PATH})
message(status " LIBRARY_OUTPUT_PATH: " ${LIBRARY_OUTPUT_PATH})

message(status " PROJECT_NAME: " ${PROJECT_NAME})

MESSAGE(STATUS " HOME dir: " $ENV{HOME})

MESSAGE(STATUS " CMAKE_MAJOR_VERSION: " ${CMAKE_MAJOR_VERSION})
MESSAGE(STATUS " CMAKE_MINOR_VERSION: " ${CMAKE_MINOR_VERSION})
MESSAGE(STATUS " CMAKE_PATCH_VERSION: " ${CMAKE_PATCH_VERSION})
MESSAGE(STATUS " CMAKE_SYSTEM: " ${CMAKE_SYSTEM})
MESSAGE(STATUS " CMAKE_SYSTEM_NAME: " ${CMAKE_SYSTEM_NAME})
MESSAGE(STATUS " CMAKE_SYSTEM_VERSION: " ${CMAKE_SYSTEM_VERSION})
MESSAGE(STATUS " CMAKE_SYSTEM_PROCESSOR: " ${CMAKE_SYSTEM_PROCESSOR})
MESSAGE(STATUS " UNIX: " ${UNIX})
MESSAGE(STATUS " WIN32: " ${WIN32})

#install(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
#install(PROGRAMS runhello.sh DESTINATION bin)
#install(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)

