
# method1
#INCLUDE_DIRECTORIES(/usr/include)
#ADD_EXECUTABLE(curltest main.c)
#TARGET_LINK_LIBRARIES(curltest curl)

# method2
ADD_EXECUTABLE(curltest main.c)
	
FIND_PACKAGE(CURL)
IF(CURL_FOUND)
	INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
ELSE(CURL_FOUND)
	MESSAGE(FATAL_ERROR ”CURL library not found”)
ENDIF(CURL_FOUND)


